--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
     "@types/node": "^20.17.19",
     "ajv": "^8.17.1",
     "react-router-dom": "^7.2.0"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10"
   }
 }
