--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "rollup": "^4.34.8",
     "typescript": "^4.9.5",
     "vite": "^6.1.1",
     "web-vitals": "^2.1.4"
