--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "rollup": "^4.34.8",
     "typescript": "^4.9.5",
     "vite": "^6.1.1",
-    "web-vitals": "^2.1.4",
-    "webpack-dev-server": "^5.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,7 +55,8 @@
   "devDependencies": {
     "@types/node": "^20.17.19",
     "ajv": "^8.17.1",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "webpack-dev-server": "^4.7.4"
   },
   "engines": {
     "node": ">=20.0.0",
