--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
-    "@mui/styles": "^6.4.5",
     "@mui/x-charts": "^7.27.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -15,17 +14,14 @@
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "^0.12.0",
     "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "rollup": "^4.34.8",
     "typescript": "^4.9.5",
-    "vite": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,14 +48,12 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/node": "^20.17.19",
-    "ajv": "^8.17.1",
-    "react-router-dom": "^7.2.0",
-    "webpack-dev-server": "^4.7.4"
-  },
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10"
+  },
+  "devDependencies": {
+    "ajv": "^7.2.4",
+    "react-router-dom": "^7.2.0"
   }
 }
