--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "axios": "^1.7.9",
+    "esbuild": "^0.24.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "rollup": "^4.34.8",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "vite": "^6.1.1",
+    "web-vitals": "^2.1.4",
+    "yaml": "^1.10.2"
   },
   "scripts": {
     "start": "react-scripts start",
