--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "rollup": "^4.34.8",
     "typescript": "^4.9.5",
     "vite": "^6.1.1",
-    "web-vitals": "^2.1.4",
-    "yaml": "^1.10.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,6 +57,7 @@
   "devDependencies": {
     "@types/node": "^22.13.5",
     "ajv": "^8.17.1",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "yaml": "^2.7.0"
   }
 }
